# liboggz

./: AUTHORS  ChangeLog  Makefile.am  PATCHES  README  README.win32  SConstruct  TODO  autogen.sh  configure.ac  oggz.pc.in
apache/: oggz-chop.conf  oggz-chop.conf.in
bash-completion/: oggz
debian/: changelog  control  copyright  liboggz1-dev.files  liboggz1.files  rules  watch
doc/: Doxyfile.in  Makefile.am  Makefile.in  oggz-chop.1  oggz-chop.1.sgml  oggz-codecs.1  oggz-comment.1  oggz-comment.1.sgml  oggz-diff.1  oggz-diff.1.sgml  oggz-dump.1  oggz-dump.1.sgml  oggz-info.1  oggz-info.1.sgml  oggz-known-codecs.1  oggz-known-codecs.1.sgml  oggz-merge.1  oggz-merge.1.sgml  oggz-rip.1  oggz-rip.1.sgml  oggz-scan.1  oggz-scan.1.sgml  oggz-sort.1  oggz-sort.1.sgml  oggz-validate.1  oggz-validate.1.sgml  oggz.1.sgml  oggzdiff.1  oggzdiff.1.sgml  oggzdump.1  oggzdump.1.sgml  oggzinfo.1  oggzinfo.1.sgml  oggzmerge.1  oggzmerge.1.sgml  oggzrip.1  oggzrip.1.sgml
doc/liboggz/html/: files.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__basics.html  group__building.html  group__configuration.html  group__force__feed.html  group__hungry.html  group__install.html  group__metric.html  group__read__api.html  group__seek__api.html  group__seeking__group.html  group__write__api.html  group__writing.html  index.html  modules.html  oggz_8h-source.html  oggz_8h.html  oggz__constants_8h-source.html  oggz__constants_8h.html  oggz__table_8h-source.html  oggz__table_8h.html
doc/liboggz/latex/: Makefile  doxygen.sty  files.tex  group__basics.tex  group__building.tex  group__configuration.tex  group__force__feed.tex  group__hungry.tex  group__install.tex  group__metric.tex  group__read__api.tex  group__seek__api.tex  group__seeking__group.tex  group__write__api.tex  group__writing.tex  index.tex  modules.tex  oggz_8h.tex  oggz__constants_8h.tex  oggz__table_8h.tex  refman.tex
include/: Makefile.in  ogg_compat.h
include/oggz/: Makefile.am  Makefile.in  oggz.h  oggz_comments.h  oggz_constants.h  oggz_deprecated.h  oggz_io.h  oggz_off_t.h  oggz_off_t.h.in  oggz_off_t_win32.h  oggz_packet.h  oggz_read.h  oggz_seek.h  oggz_table.h  oggz_write.h
release_notes/: liboggz-0.8.3.txt  liboggz-0.8.4.txt  liboggz-0.8.6.txt  liboggz-0.9.1.txt  liboggz-0.9.6.txt  liboggz-0.9.7.txt  liboggz-1.0.2.txt
src/examples/: Makefile.am  SConscript  dump-comments.c  fix-eos.c  identity.c  modify-headers.c  read-file.c  read-io.c  read-pages.c  rewrite-pages.c  seek-stress.c  write-feed.c  write-hungry.c
src/liboggz/: Makefile.am  SConscript  Version_script.in  comments.c  debug.h  dirac.c  metric_granuleshift.c  metric_internal.c  metric_linear.c  oggz.c  oggz_auto.c  oggz_auto.h  oggz_byteorder.h  oggz_comments.c  oggz_compat.h  oggz_dlist.c  oggz_io.c  oggz_macros.h  oggz_private.h  oggz_read.c  oggz_seek-old.c  oggz_seek.c  oggz_stream.c  oggz_stream.h  oggz_table.c  oggz_vector.c  oggz_vector.h  oggz_write.c
src/tests/: Makefile.am  SConscript  comment-test.c  duration.c  io-count.c  io-read-single.c  io-read.c  io-run.c  io-seek.c  io-write-flush.c  io-write.c  oggz_tests.h  read-generated.c  read-stop-err.c  read-stop-ok.c  seek-offset.c  seek-position.c  seek-stress-test.sh  seek-stress.c  seek-units.c  write-bad-bos.c  write-bad-bytes.c  write-bad-eos.c  write-bad-granulepos.c  write-bad-guard.c  write-bad-packetno.c  write-bad-serialno.c  write-dup-bos.c  write-prefix.c  write-recursive.c  write-suffix.c  write-unmarked-guard.c
src/tools/: Makefile.am  SConscript  oggz-basetime.c  oggz-chop.c  oggz-codecs.c  oggz-comment.c  oggz-diff.in  oggz-dump.c  oggz-info.c  oggz-known-codecs.c  oggz-merge.c  oggz-rip.c  oggz-scan.c  oggz-sort.c  oggz-validate.c  oggz-validate.h  oggz.c  oggz_tools.c  oggz_tools.h  oggzdiff.in  oggzdump.c  oggzed.c  oggzinfo.c  oggzmerge.c  oggzrip.c  skeleton.c  skeleton.h
src/tools/oggz-chop/: Makefile.am  cgi.c  cmd.c  cmd.h  header.c  header.h  httpdate.c  httpdate_test.c  main.c  oggz-chop.c  oggz-chop.h  timespec.h
symbian/: bld.inf  config.h  liboggz.mmp
win32/: C_libOGGZ.vcproj  Makefile  OGGZDump.vcproj  config.h  liboggz.def  liboggz.dsp  liboggz.dsw  liboggz.sln  liboggz.vcproj  oggzdump.dsp  oggzdump.vcproj  oggzed.dsp  oggzed.vcproj  oggzinfo.dsp  oggzinfo.vcproj  oggzmerge.dsp  oggzmerge.vcproj  oggzrip.vcproj  oggzscan.vcproj  oggzvalidate.vcproj
win32/VS2003/: liboggz.sln  liboggz.vcproj
win32/VS2003/liboggz/: libogg_importer.vcproj  liboggz.vcproj  oggzdump.vcproj  oggzinfo.vcproj  oggzmerge.vcproj  oggzrip.vcproj  oggzscan.vcproj  oggzvalidate.vcproj
win32/VS2005/: liboggz.sln  liboggz.vcproj
win32/VS2005/liboggz/: libogg_importer.vcproj  liboggz.vcproj  oggzdump.vcproj  oggzinfo.vcproj  oggzmerge.vcproj  oggzrip.vcproj  oggzscan.vcproj  oggzvalidate.vcproj
