#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
#  ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
#  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
#  PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE ORGANISATION OR
#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
#  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
#  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
#  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
#  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
## Process this file with automake to produce Makefile.in

SUBDIRS = doc include src

EXTRA_DIST = oggz.pc.in oggz-uninstalled.pc.in README.symbian README.win32 \
	symbian/bld.inf \
	symbian/config.h \
	symbian/liboggz.mmp \
	win32/Makefile \
	win32/*.[ch] \
	win32/*.def \
	win32/*.dsp \
	win32/*.dsw \
	win32/VS200[35]/*.sln \
	win32/VS200[35]/liboggz/*.vcproj \
	win32/liboggz_bin_installer/liboggz_bin_installer.vdproj

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = oggz.pc
